components/16-openwebui/openwebui-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui
  annotations:
    openshift.io/display-name: "Demo - OpenWebUi"
  labels:
    openshift.io/cluster-monitoring: 'true'
