components/16-openwebui/openwebui-svc.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  selector:
    app: openwebui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
