components/16-openwebui/openwebui-route.yaml
# route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openwebui
  namespace: openwebui
spec:
  to:
    kind: Service
    name: openwebui
  port:
    targetPort: 8080
  tls:
    termination: edge
